[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# include commit hash in local version; add date if dirty
local_scheme = "node-and-date"
#write_to = "molscore/_version.py"
#write_to_template = "__version__ = \"{version}\"\n"

[project]
name = "MolScore"
authors = [
  { name="Morgan Thomas", email="morganthomas263@gmail.com" },
]
description = "A scoring, benchmarking and evaluation framework for goal directed generative models"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/MorganCThomas/MolScore"
Issues = "https://github.com/MorganCThomas/MolScore/issues"